<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Unifinetlogin</string>
    <string name="matr">Matricola</string>
    <string name="pwd">Password</string>
    <string name="start">avvia</string>
    <string name="stop">ferma</string>
    <string name="help">Info</string>
    <string name="help1">Unifinetlogin - versione Android</string>
    <string name="help2">Uso</string>
    <string name="help3">Dopo aver lanciato il servizio, per tornare ad utilizzare il dispositivo mantenendo il servizio attivo
    premere il tasto HOME, per chiudere l\'applicazione e fermare il servizio premere il tasto BACK</string>

</resources>
