<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/abc_ab_bottom_solid_dark_holo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matr"
        android:id="@+id/textView"
        android:layout_marginTop="103dp"
        android:layout_marginLeft="20dp"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pwd"
        android:id="@+id/textView2"
        android:textSize="24sp"
        android:layout_below="@+id/matri"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="59dp" />

    <EditText
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passi"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignRight="@+id/matri"
        android:layout_alignEnd="@+id/matri" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/btn"
        android:layout_marginTop="124dp"
        android:layout_below="@+id/passi"
        android:layout_centerHorizontal="true"
        android:onClick="toggle" />

    <EditText
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/matri"
        android:layout_alignTop="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:layout_marginLeft="20dp"
        android:maxLength="7" />

</RelativeLayout>